Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -1,7 +1,3 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
 
 trigger: none
 variables:
@@ -9,6 +5,7 @@ variables:
   rg_name: 'storacc-rg'
   location: 'WestEurope'
   storage_name: 'storaccxyz001'
+  storagekey: ''
 pool:
   vmImage: ubuntu-latest
 stages:
