--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -13,6 +13,7 @@ stages:
   jobs:
     - job: tfstate
       steps:
+      - checkout: none
       - task: AzurePowerShell@5
         displayName: Configure remote state storage account
         inputs:
@@ -37,5 +38,11 @@ stages:
           Inline: |
             $ACCOUNT_KEY=(Get-AzStorageAccountKey -ResourceGroupName $(rg_name) -Name $(storage_name))[0].value
             Write-Host "##vso[task.setvariable variable=storagekey]$ACCOUNT_KEY"
+            Write-Output 'storagekey' $storagekey
+            Write-Output 'storagekey' $(storagekey)
+      - task: PowerShell@2
+        inputs:
+          targetType: 'inline'
+          script: |
             Write-Output 'storagekey' $storagekey
             Write-Output 'storagekey' $(storagekey)
