Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -7,6 +7,7 @@ variables:
   storage_name: 'storaccxyz001'
   container: 'tfstate'
   storagekey: ''
+  destroyinfra: false
 pool:
   vmImage: ubuntu-latest
 stages:
@@ -83,6 +84,7 @@ stages:
           commandOptions: '-auto-approve'
           environmentServiceNameAzureRM: '$(sp)'
       - task: TerraformTaskV4@4
+        condition: eq(variables.destroyinfra, true)
         displayName: Terraform destroy
         inputs:
           provider: 'azurerm'
