--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -72,6 +72,12 @@ stages:
         displayName: Terraform plan
         inputs:
           provider: 'azurerm'
+          command: 'validate'
+          workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/'
+      - task: TerraformTaskV4@4
+        displayName: Terraform plan
+        inputs:
+          provider: 'azurerm'
           command: 'plan'
           workingDirectory: '$(System.DefaultWorkingDirectory)/terraform/'
           environmentServiceNameAzureRM: '$(sp)'
