--- a/Tailspin.SpaceGame.Web/Dockerfile
+++ b/Tailspin.SpaceGame.Web/Dockerfile
@@ -1,10 +1,11 @@
 FROM mcr.microsoft.com/dotnet/aspnet:6.0 AS base
 WORKDIR /app
-RUN ls
 EXPOSE 80
 
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
+RUN dir -s
+RUN dir /s
 COPY ["Tailspin.SpaceGame.Web.csproj", "Tailspin.SpaceGame.Web/"]
 
 RUN dotnet restore "Tailspin.SpaceGame.Web.csproj"
