--- a/Tailspin.SpaceGame.Web/Dockerfile
+++ b/Tailspin.SpaceGame.Web/Dockerfile
@@ -5,7 +5,7 @@ EXPOSE 80
 FROM mcr.microsoft.com/dotnet/sdk:6.0 AS build
 WORKDIR /src
 RUN dir -s
-RUN dir /s
+RUN ls
 COPY ["Tailspin.SpaceGame.Web.csproj", "Tailspin.SpaceGame.Web/"]
 
 RUN dotnet restore "Tailspin.SpaceGame.Web.csproj"
