--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -12,7 +12,7 @@ variables:
   # Update ACR.Name value with ACR name. Please note ACR names should be all lower-case and alphanumeric only.
   ACR.Name: 'acrtestsshtech'
   ACR.LoginServer: '$(ACR.Name).azurecr.io'
-  ACR.ImageName: '$(ACR.Name):$(Build.BuildId)'
+  ACR.ImageName: 'spacegame-web:$(Build.BuildId)'
   # Update AKS.ClusterName value Azure kubernetes cluster name.
   AKS.ClusterName: 'k8stest'
   # Docker Container port
@@ -30,3 +30,44 @@ jobs:
         command: 'buildAndPush'
         Dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/'
+        tags: '$(ACR.ImageName)'
+  - bash: |
+       echo "apiVersion : apps/v1beta1
+       kind: Deployment
+       metadata:
+         name: $(ACR.Name)
+       spec:
+         replicas: 1
+         template:
+           metadata:
+             labels:
+               app: $(ACR.Name)
+           spec:
+             containers:
+             - name: $(ACR.Name)
+               image: $(ACR.LoginServer)/$(ACR.ImageName)
+               ports:
+               - containerPort: $(Container.Port)
+       ---
+       apiVersion: v1
+       kind: Service
+       metadata:
+         name: $(ACR.Name)
+       spec:
+         type: LoadBalancer
+         ports:
+         - port: $(ACR.ImageName)
+         selector:
+           app: $(ACR.Name)" > $(AKS.ManifestDeploymentYaml)
+    displayName: 'Generate kubernetes deployment yaml'
+  - task: Kubernetes@1
+    inputs:
+      connectionType: 'Azure Resource Manager'
+      azureSubscriptionEndpoint: 'sp-learn-aks'
+      azureResourceGroup: 'rg-pretty-grubworm'
+      kubernetesCluster: 'k8stest'
+      useClusterAdmin: true
+      command: 'apply'
+      arguments: '-f $(AKS.ManifestDeploymentYaml)'
+      secretType: 'dockerRegistry'
+      containerRegistryType: 'Azure Container Registry'
