--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -32,7 +32,7 @@ jobs:
         Dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/'
         tags: |
-          '$(ACR.Name):$(Build.BuildId)'
+          '$(Build.BuildId)'
     - bash: |
         echo "apiVersion : apps/v1beta1
         kind: Deployment
