Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -18,6 +18,7 @@ variables:
   AKS.ManifestDeploymentYaml: ''
   # Docker Container port
   Container.Port: 5000
+  configMapName: deployconfigmap
 
 jobs:
   - job: deploy
@@ -44,6 +45,25 @@ jobs:
         containerRegistryType: 'Azure Container Registry'
         configMapName: 'deployconfigmap'
         configMapArguments: '--from-literal=DEPLOYMENT_NAME=$(ACR.Name) --from-literal=IMAGE=$(ACR.ImageName) --from-literal=CONTAINER_NAME=$(ACR.Name)  --from-literal=DEPLOYMENT_LABEL=$(ACR.Name) --from-literal=PORT=$(Container.Port)'
+    - task: Kubernetes@1
+      displayName: Create ConfigMap
+      inputs:
+        connectionType: 'Azure Resource Manager'
+        azureSubscriptionEndpoint: 'sp-learn-aks'
+        azureResourceGroup: 'rg-pretty-grubworm'
+        kubernetesCluster: 'k8stest'
+        command: 'create'
+        configuration: |
+          apiVersion: v1
+          kind: ConfigMap
+          metadata:
+            name: $(configMapName)
+          data:
+            DEPLOYMENT_NAME: $(ACR.Name)
+            IMAGE: $(ACR.ImageName) 
+            CONTAINER_NAME: $(ACR.Name)  
+            DEPLOYMENT_LABEL: $(ACR.Name) 
+            PORT: $(Container.Port
     - task: Kubernetes@1
       inputs:
         connectionType: 'Azure Resource Manager'
