--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -33,18 +33,18 @@ jobs:
         Dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
         buildContext: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/'
         tags: '$(Build.BuildId)'
-    - task: Kubernetes@1
-      displayName: Create ConfigMap
-      inputs:
-        connectionType: 'Azure Resource Manager'
-        azureSubscriptionEndpoint: 'sp-learn-aks'
-        azureResourceGroup: 'rg-pretty-grubworm'
-        kubernetesCluster: 'k8stest'
-        command: 'create'
-        secretType: 'dockerRegistry'
-        containerRegistryType: 'Azure Container Registry'
-        configMapName: 'deployconfigmap'
-        configMapArguments: '--from-literal=DEPLOYMENT_NAME=$(ACR.Name) --from-literal=IMAGE=$(ACR.ImageName) --from-literal=CONTAINER_NAME=$(ACR.Name)  --from-literal=DEPLOYMENT_LABEL=$(ACR.Name) --from-literal=PORT=$(Container.Port)'
+    #- task: Kubernetes@1
+    #  displayName: Create ConfigMap
+    #  inputs:
+    #    connectionType: 'Azure Resource Manager'
+    #    azureSubscriptionEndpoint: 'sp-learn-aks'
+    #    azureResourceGroup: 'rg-pretty-grubworm'
+    #    kubernetesCluster: 'k8stest'
+    #    command: 'create'
+     #   secretType: 'dockerRegistry'
+     #   containerRegistryType: 'Azure Container Registry'
+     #   configMapName: 'deployconfigmap'
+     #   configMapArguments: '--from-literal=DEPLOYMENT_NAME=$(ACR.Name) --from-literal=IMAGE=$(ACR.ImageName) --from-literal=CONTAINER_NAME=$(ACR.Name)  --from-literal=DEPLOYMENT_LABEL=$(ACR.Name) --from-literal=PORT=$(Container.Port)'
     - task: Kubernetes@1
       displayName: Create ConfigMap
       inputs:
