Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -52,7 +52,7 @@ jobs:
         azureSubscriptionEndpoint: 'sp-learn-aks'
         azureResourceGroup: 'rg-pretty-grubworm'
         kubernetesCluster: 'k8stest'
-        command: 'create'
+        command: 'apply'
         configuration: |
           apiVersion: v1
           kind: ConfigMap
