Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -53,7 +53,7 @@ jobs:
         azureSubscriptionEndpoint: 'sp-learn-aks'
         azureResourceGroup: 'rg-pretty-grubworm'
         kubernetesCluster: 'k8stest'
-        command: 'apply'
+        command: 'create'
         secretType: 'dockerRegistry'
         containerRegistryType: 'Azure Container Registry'
         configMapArguments: '--from-literal=key1=value1'
