--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,30 +1,26 @@
         kind: Deployment
         metadata:
-          name: ""
+          name: __ACR.Name__
         spec:
           replicas: 1
           template:
             metadata:
               labels:
-                app: ""
+                app: __ACR.Name__
             spec:
               containers:
-              - name: ""
-                image: ""
+              - name: __ACR.Name__
+                image: __ACR.ImageName__
                 ports:
-                - containerPort: 0              
-                envFrom:
-                - configMapRef: deployConfigMap
+                - containerPort: __Container.Port__   
         ---
         apiVersion: v1
         kind: Service
         metadata:
-          name: ""
+          name: __ACR.Name__
         spec:
           type: LoadBalancer
           ports:
-          - port: 0
+          - port: __Container.Port__
           selector:
-            app: ""          
-          envFrom:
-          - configMapRef: deployConfigMap
+            app: __ACR.Name__  
