--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -20,6 +20,7 @@ variables:
   Container.Port: 5000
   configMapName: deployconfigmap
   executetask: false
+  manifestfile: $(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/manifests/myconfigmap.yaml
 
 jobs:
   - job: deploy
@@ -36,7 +37,7 @@ jobs:
         tags: '$(Build.BuildId)'
     - task: replacetokens@5
       inputs:
-        targetFiles: 'manifests/myconfigmap.yaml'
+        targetFiles: 'manifests/deployment.yaml'
         encoding: 'auto'
         tokenPattern: 'custom'
         tokenPrefix: '__'
@@ -62,14 +63,14 @@ jobs:
      #   configMapName: 'deployconfigmap'
      #   configMapArguments: '--from-literal=DEPLOYMENT_NAME=$(ACR.Name) --from-literal=IMAGE=$(ACR.ImageName) --from-literal=CONTAINER_NAME=$(ACR.Name)  --from-literal=DEPLOYMENT_LABEL=$(ACR.Name) --from-literal=PORT=$(Container.Port)'
     - task: Kubernetes@1
-      condition: eq(variables.executetask, true)
-      displayName: Create ConfigMap
+      displayName: apply
       inputs:
         connectionType: 'Azure Resource Manager'
         azureSubscriptionEndpoint: 'sp-learn-aks'
         azureResourceGroup: 'rg-pretty-grubworm'
         kubernetesCluster: 'k8stest'
         command: 'create'
+        arguments: '-f $(manifestfile)'
         secretType: 'dockerRegistry'
         containerRegistryType: 'Azure Container Registry'
         configMapArguments: '--from-literal=key1=value1'
