--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -1,26 +1,27 @@
-        kind: Deployment
-        metadata:
-          name: __ACR.Name__
-        spec:
-          replicas: 1
-          template:
-            metadata:
-              labels:
-                app: __ACR.Name__
-            spec:
-              containers:
-              - name: __ACR.Name__
-                image: __ACR.ImageName__
-                ports:
-                - containerPort: __Container.Port__   
-        ---
-        apiVersion: v1
-        kind: Service
-        metadata:
-          name: __ACR.Name__
-        spec:
-          type: LoadBalancer
-          ports:
-          - port: __Container.Port__
-          selector:
-            app: __ACR.Name__  
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: __ACR.Name__
+spec:
+  replicas: 1
+  template:
+    metadata:
+      labels:                
+        app: __ACR.Name__
+    spec:
+      containers:
+      - name: __ACR.Name__
+        image: __ACR.ImageName__
+        ports:
+        - containerPort: __Container.Port__   
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: __ACR.Name__
+spec:
+  type: LoadBalancer
+  ports:
+  - port: __Container.Port__
+  selector:
+    app: __ACR.Name__  
