--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -4,24 +4,27 @@ metadata:
   name: __ACR.Name__
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      app: __ACR.Name__
   template:
     metadata:
-      labels:                
+      labels:
         app: __ACR.Name__
     spec:
       containers:
       - name: __ACR.Name__
         image: __ACR.ImageName__
         ports:
-        - containerPort: __Container.Port__   
+        - containerPort: __Container.Port__
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: __ACR.Name__
 spec:
+  selector:
+    app: __ACR.Name__
   type: LoadBalancer
   ports:
   - port: __Container.Port__
-  selector:
-    app: __ACR.Name__  
