--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -11,9 +11,9 @@ variables:
   # Update ACR.Name value with ACR name. Please note ACR names should be all lower-case and alphanumeric only.
   ACR.Name: 'acrtestsshtech'
   ACR.LoginServer: '$(ACR.Name).azurecr.io'
-  ACR.ImageName: '$(ACR.LoginServer)/web:$(Build.BuildId)'
+  ACR.ImageName: '$(ACR.Name):$(Build.BuildId)'
   containerRegistry: '$(ACR.Name).azurecr.io'
-  # Update AKS.ClusterName value Azure kubernetes cluster name.
+  # Update AKS.ClusterName value Azure kubernetes cluster name. ***.azurecr.io/***:***.azurecr.io/myimage:v1"
   AKS.ClusterName: 'k8stest'
   AKS.ManifestDeploymentYaml: ''
   # Docker Container port
@@ -22,20 +22,38 @@ variables:
   executetask: false
   manifestfile: manifests/deployment.yaml
   AKS.Namespace: 'demo'
+  dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
 
 jobs:
   - job: deploy
     pool:
       vmImage: ubuntu-latest
     steps:
-    - task: Docker@2
+    - task: Docker@1
+      displayName: 'Build an image'
       inputs:
-        containerRegistry: 'acrpush'
-        repository: '$(ACR.Name)'
-        command: 'buildAndPush'
-        Dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
-        buildContext: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/'
-        tags: '$(containerRegistry)/myimage:v1'
+        containerregistrytype: 'Azure Container Registry'
+        azureSubscriptionEndpoint: 'sp-learn-aks'
+        azureContainerRegistry: '$(ACR.LoginServer)'
+        imageName: '$(ACR.ImageName)'
+        command: build
+        dockerFile: '$(dockerfile)'
+    - task: Docker@1
+      displayName: 'Push an image'
+      inputs:
+        containerregistrytype: 'Azure Container Registry'
+        azureSubscriptionEndpoint: 'sp-learn-aks'
+        azureContainerRegistry: '$(ACR.LoginServer)'
+        imageName: '$(ACR.ImageName)'
+        command: push
+    #- task: Docker@2
+      #inputs:
+        #containerRegistry: 'acrpush'
+        #repository: '$(ACR.Name)'
+        #command: 'buildAndPush'
+        #Dockerfile: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/Dockerfile'
+        #buildContext: '$(Build.SourcesDirectory)/Tailspin.SpaceGame.Web/'
+        #tags: '$(containerRegistry)/myimage:v1'
     - task: replacetokens@5
       inputs:
         targetFiles: '$(manifestfile)'
