--- a/manifests/deployment.yaml
+++ b/manifests/deployment.yaml
@@ -2,7 +2,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: __ACR.Name__
-  namespace: __ACR.Namespace__
+  namespace: __AKS.Namespace__
 spec:
   replicas: 1
   selector:
@@ -23,7 +23,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: __ACR.Name__
-  namespace: __ACR.Namespace__
+  namespace: __AKS.Namespace__
 spec:
   selector:
     app: __ACR.Name__
