Update azure-pipelines-1.yml for Azure Pipelines

--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -2,6 +2,7 @@
 # Build a Docker images, push it to an Azure Container Registry, and deploy it to Azure Kubernetes Service.
 # https://learn.microsoft.com/en-us/training/modules/deploy-kubernetes/1-introduction
 # https://docs.microsoft.com/azure/devops/pipelines/languages/docker
+# Create ACR and AKS
 trigger: none
 variables:
   sp: 'sp-learn-aks'
